docs(readme): overhaul documentation and architecture overview for enterprise-grade CRM
- Rename project to Real Estate CRM System with expanded scope
- Update features to include Express.js backend, security hardening, and Redis caching
- Replace n8n workflows with native Express.js services and detailed API endpoints
- Add comprehensive quick start guide for environment setup, database, backend, and frontend
- Expand project structure with detailed directory descriptions for frontend, backend, database, and docs
- Include extensive API documentation with authentication, user, leads, tasks, analytics, and system management
- Document advanced AI features including GPT-4 integration and machine learning lead scoring
- Add enterprise security practices: JWT auth, rate limiting, CSRF protection, and OWASP compliance
- Provide troubleshooting and deployment guides for development, staging, and production environments
- Introduce BMAD method integration for AI-assisted development workflows and agent roles
- Add roadmap highlighting real-time collaboration, microservices, GraphQL API, and caching strategies
- List acknowledgments and third-party licenses for transparency and compliance
- Update backend dependencies with new packages: node-cron, rate-limit-redis, twilio, and dayjs

--- a/backend/package.json
+++ b/backend/package.json
@@ -44,8 +44,10 @@
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "node-cron": "^3.0.3",
     "openai": "^4.20.1",
     "pg": "^8.11.3",
+    "rate-limit-redis": "^4.2.2",
     "redis": "^4.6.10",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
